# ask_ai_dagster

./: .gitignore  README.md  pyproject.toml
src/ask_ai_dagster/defs/: github.py  io_managers.py  pinecone.py  queries.py  resources.py
src/ask_ai_dagster/defs/assets/: __init__.py  ingestion.py  retrieval.py
src/ask_ai_dagster/defs/resources/: __init__.py  github.py  pinecone.py  scraper.py
