[project]
name = "ask_ai_dagster"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dagster==1.12.6",
    "gql[all]>=3.5.3",
    "langchain>=1.2.0",
    "lxml>=6.0.2",
    "pinecone>=8.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ask_ai_dagster"
registry_modules = [
    "ask_ai_dagster.components.*",
]


